--- a/index.html
+++ b/index.html
@@ -14,16 +14,37 @@
  </head>
  <body><!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
-   <div class="container"><a class="navbar-brand" href="#" id="site-title">Marcia Lacava Advocacia</a> <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"> <span class="navbar-toggler-icon"></span> </button>
+  <div class="container-fluid">
+    <!-- Marca com logo + texto -->
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="imagens/MARCIA LACAVA -ADVOCACIA3.png" alt="Logo Marcia Lacava Advocacia" 
+           class="me-2" id="logo-menu">
+      <span class="titulo-menu">Marcia Lacava Advocacia</span>
+    </a>
+
+    <!-- Botão do menu mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+            data-bs-target="#navbarNav" aria-controls="navbarNav" 
+            aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Itens do menu -->
     <div class="collapse navbar-collapse" id="navbarNav">
-     <ul class="navbar-nav ms-auto">
-      <li class="nav-item"><a class="nav-link" href="#sobre">Sobre Nós</a></li>
-      <li class="nav-item"><a class="nav-link" href="#areas">Áreas de Atuação</a></li>
-      <li class="nav-item"><a class="nav-link" href="#portfolio">Portfólio</a></li>
-     </ul>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#sobre">Sobre Nós</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#areas">Áreas de Atuação</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="#portfolio">Portfólio</a>
+        </li>
+      </ul>
     </div>
-   </div>
-  </nav><!-- Hero Section -->
+  </div>
+</nav><!-- Hero Section -->
   <section class="hero-section">
    <div class="container">
     <div class="row align-items-center">
