Ajuste para dispositivos móveis

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- Marca com logo + texto -->
     <a class="navbar-brand d-flex align-items-center" href="#">
       <img src="imagens/MARCIA LACAVA -ADVOCACIA3.png" alt="Logo Marcia Lacava Advocacia" 
-           class="me-2" id="logo-menu">
-      <span class="titulo-menu">Marcia Lacava Advocacia</span>
+           class="me-2 logo-navbar">
+      <span class="brand-text">Marcia Lacava Advocacia</span>
     </a>
 
     <!-- Botão do menu mobile -->
