--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;family=Inter:wght@300;400;500;600&amp;display=swap"
       rel="stylesheet"
     />
-   <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css" />
     <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
     <script src="https://cdn.tailwindcss.com" type="text/javascript"></script>
   </head>
@@ -37,14 +37,17 @@
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
       <div class="container-fluid px-3 px-lg-4">
         <a
-          class="navbar-brand d-flex align-items-center"
-          href="#"
+          class="navbar-brand d-flex align-items-center gap-2 gap-lg-3"
+          href="#hero"
           id="site-title"
         >
-          <i
-            class="bi bi-scales me-2 me-lg-3"
-            style="font-size: 1.8rem; color: #ffffff"
-          ></i>
+        <div class="logo-circle">
+            <img
+              src="imagens/MARCIA LACAVA -ADVOCACIA4.png"
+              alt="Logo Marcia Lacava Advocacia"
+              class="logo-img"
+            />
+          </div>
           <span class="d-none d-sm-inline">Marcia Lacava Advocacia</span>
           <span class="d-inline d-sm-none">M. Lacava</span>
         </a>
@@ -65,10 +68,10 @@
               <a class="nav-link" href="#sobre">Sobre Nós</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Portfólio</a>
+              <a class="nav-link" href="#areas">Áreas de Atuação</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#areas">Áreas de Atuação</a>
+              <a class="nav-link" href="#portfolio">Portfólio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#agendamento">Agendamento</a>
@@ -81,7 +84,7 @@
       </div>
     </nav>
     <!-- Hero Section -->
-    <section class="hero-section">
+    <section class="hero-section" id="hero">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-8 mx-auto text-center hero-content">
@@ -117,8 +120,20 @@
         </div>
         <div class="row align-items-center">
           <div class="col-lg-8 mb-4 mb-lg-0">
-            <p class="about-text" id="about-text">O escritório Marcia Lacava Advocacia atua há mais de uma década oferecendo assessoria jurídica especializada, com foco em soluções personalizadas para cada cliente. Nossa prática é fundamentada na ética profissional, transparência e comprometimento com a excelência técnica, sempre respeitando os princípios e diretrizes estabelecidos pela Ordem dos Advogados do Brasil.</p>
-      <p class="about-text mt-3">Desenvolvemos estratégias jurídicas eficazes, priorizando a prevenção de litígios e a construção de soluções que atendam aos interesses legítimos de nossos clientes, com especial expertise em planejamento patrimonial e direito empresarial.</p>
+            <p class="about-text" id="about-text">
+              O escritório Marcia Lacava Advocacia atua há mais de uma década
+              oferecendo assessoria jurídica especializada, com foco em soluções
+              personalizadas para cada cliente. Nossa prática é fundamentada na
+              ética profissional, transparência e comprometimento com a
+              excelência técnica, sempre respeitando os princípios e diretrizes
+              estabelecidos pela Ordem dos Advogados do Brasil.
+            </p>
+            <p class="about-text mt-3">
+              Desenvolvemos estratégias jurídicas eficazes, priorizando a
+              prevenção de litígios e a construção de soluções que atendam aos
+              interesses legítimos de nossos clientes, com especial expertise em
+              planejamento patrimonial e direito empresarial.
+            </p>
           </div>
           <div class="col-lg-4">
             <div class="row g-3">
@@ -411,7 +426,7 @@
                         type="tel"
                         class="form-control"
                         id="client-phone"
-                        placeholder="(11) 98765-4321"
+                        placeholder="(xx) xxxxx-xxxx"
                         maxlength="15"
                         required
                       />
