--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           href="#hero"
           id="site-title"
         >
-        <div class="logo-circle">
+          <div class="logo-circle">
             <img
               src="imagens/MARCIA LACAVA -ADVOCACIA4.png"
               alt="Logo Marcia Lacava Advocacia"
@@ -49,7 +49,7 @@
             />
           </div>
           <span class="d-none d-sm-inline">Marcia Lacava Advocacia</span>
-          <span class="d-inline d-sm-none">M. Lacava</span>
+          <span class="d-inline d-sm-none">Marcia Lacava</span>
         </a>
         <button
           class="navbar-toggler"
