--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
     </div>
     <div class="row align-items-center">
      <div class="col-lg-8 mb-4 mb-lg-0">
-      <p class="about-text fade-in-up" id="about-text">O escritório Marcia Lacava Advocacia atua há mais de uma década oferecendo assessoria jurídica especializada, com foco em soluções personalizadas para cada cliente. Nossa prática é fundamentada na ética profissional, transparência e comprometimento com a excelência técnica, sempre respeitando os princípios e diretrizes estabelecidos pela Ordem dos Advogados do Brasil.</p>
-      <p class="about-text fade-in-up" id="about-text">Desenvolvemos estratégias jurídicas eficazes, priorizando a prevenção de litígios e a construção de soluções que atendam aos interesses legítimos de nossos clientes, com especial expertise em planejamento patrimonial e direito empresarial.</p>
+      <p class="about-text fade-in-up" id="about-text">Sou advogada recém-formada, dedicada a oferecer o melhor atendimento aos meus clientes. Meu escritório nasceu do desejo de fazer a diferença através do direito, sempre com ética e transparência. Acredito em um atendimento humanizado, onde cada cliente é único e merece toda atenção.</p><br>
      </div>
      <div class="col-lg-4">
       <div class="about-image-container fade-in-up"><img src="imagens/photo-1589829545856-d10d557cf95f.jpg" alt="Escritório de Advocacia - Livros jurídicos e balança da justiça" class="about-image" onerror="this.src=''; this.alt='Imagem não disponível'; this.style.display='none';">
