--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="estilos/style.css" />
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
   <script src="https://cdn.tailwindcss.com" type="text/javascript"></script>
+  <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
