--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <br>
         </div>
         <div class="col-lg-4">
-          <div class="about-image-container fade-in-up"><img src="imagens/photo-1589829545856-d10d557cf95f.jpg"
+          <div class="about-image-container fade-in-up"><img src="imagens/perfil-marcia-lacava.jpeg"
               alt="Escritório de Advocacia - Livros jurídicos e balança da justiça" class="about-image"
               onerror="this.src=''; this.alt='Imagem não disponível'; this.style.display='none';">
           </div>
